Apparently multi line strings make for invalid json, well hot damn.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "carwyn/laravel-datumbox",
-    "description": "Lets you use the datumbox sentiment analysis API in laravel with a 
-    conventient facade accessor.",
+    "description": "Lets you use the datumbox sentiment analysis API in laravel with a conventient facade accessor.",
     "tags": ["Laravel-4", "Sentiment Analysis", "Datumbox"],
     "authors": [
         {
